--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,5 @@
-$font-stack: Helvetica, sans-serif;
-$primary-color: #333;
-
-body {
-  font: 100% $font-stack;
-  color: $primary-color;
-  text-align: center;
+*{
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
 }
